--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kevin Profile Page</title>
+    <link rel="stylesheet" href="/src/index.css" />
+    <title>Kevin Chan</title>
   </head>
   <body>
     <div id="root"></div>
